--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3"
   }
 }
